--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -17,7 +17,7 @@ on:
        type: boolean
       enable_feature_y:
        description: "是否启用lz4kd"
-       required: false
+       required: true
        default: false
        type: boolean
        
